--- a/Vivria/src/main/webapp/WEB-INF/web.xml
+++ b/Vivria/src/main/webapp/WEB-INF/web.xml
@@ -29,5 +29,11 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!-- Let's Encrypt SSL certificate -->
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>/.well-known/acme-challenge/*</url-pattern>
+	</servlet-mapping>
 
 </web-app>
